// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render a heading 1 1`] = `
.c0 {
  margin: 0px;
  font-size: 2.5rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 3rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 4rem;
  }
}

<h1
  class="c0"
  size="1"
>
  Heading
</h1>
`;

exports[`Heading should render a heading 2 1`] = `
.c0 {
  margin: 0px;
  font-size: 2rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 2.5rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 3rem;
  }
}

<h2
  class="c0"
  size="2"
>
  Heading
</h2>
`;

exports[`Heading should render a heading 3 1`] = `
.c0 {
  margin: 0px;
  font-size: 1.5rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 2rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 2.5rem;
  }
}

<h3
  class="c0"
  size="3"
>
  Heading
</h3>
`;

exports[`Heading should render a heading 4 1`] = `
.c0 {
  margin: 0px;
  font-size: 1rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 1.5rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 2rem;
  }
}

<h4
  class="c0"
  size="4"
>
  Heading
</h4>
`;

exports[`Heading should render a heading 5 1`] = `
.c0 {
  margin: 0px;
  font-size: 0.5rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 1rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 1.5rem;
  }
}

<h4
  class="c0"
  size="5"
>
  Heading
</h4>
`;

exports[`Heading should render correctly 1`] = `
.c0 {
  margin: 0px;
  font-size: 2.5rem;
  font-family: Roboto;
  font-weight: 700;
  font-size: 4rem;
  line-height: 1em;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
}

@media (min-width:768px) and (max-width:1024px) {
  .c0 {
    font-size: 3rem;
  }
}

@media (min-width:1025px) {
  .c0 {
    font-size: 4rem;
  }
}

<h1
  class="c0"
  size="1"
>
  Heading
</h1>
`;
